--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,18 @@
         "limits": "c",
         "ratio": "c",
         "tuple": "c",
-        "variant": "c"
+        "variant": "c",
+        "__bit_reference": "c",
+        "__mutex_base": "c",
+        "algorithm": "c",
+        "bitset": "c",
+        "chrono": "c",
+        "istream": "c",
+        "locale": "c",
+        "streambuf": "c",
+        "string": "c",
+        "string_view": "c",
+        "vector": "c",
+        "complex": "c"
     }
 }
